# gain

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  compose.yaml  flake.nix  justfile  requirements.txt  static-rust-backend.md
.github/workflows/: ci.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  lyrics.rs  main.rs  routes.rs  source.rs  state.rs  tagging.rs  transcode.rs  util.rs  worker.rs
backend/src/sources/: mod.rs  tidal.rs  youtube.rs
chart/gain-downloader/: Chart.yaml  smoke-test-values.yaml  values.yaml
chart/gain-downloader/templates/: _helpers.tpl  deployment.yaml  httproute.yaml  pvc.yaml  secret.yaml  service.yaml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/k8s/: deployment.yaml  service.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: use-resolve-stream.ts  use-status-stream.ts
frontend/src/lib/: api.ts
frontend/src/stores/: app-store.ts
k8s/: deployment.yaml  oauth2-proxy-patch.yaml  route-timeout-patch.yaml  service.yaml
templates/: banner.html  index.html
toolbox/: Dockerfile  requirements.txt
toolbox/k8s/: job-complete-metadata.yaml  job-embed-cover.yaml  job-embed-lyrics.yaml  job-find-gaps.yaml  job-fix-artist.yaml
toolbox/musiclib/: fs.py  lyrics.py  musicbrainz.py  source.py  tags.py
toolbox/tests/: conftest.py  test_fs.py  test_lyrics.py  test_musicbrainz.py  test_scope.py  test_tags.py
toolbox/tools/: _scope.py  complete_metadata.py  embed_cover.py  embed_lyrics.py  find_gaps.py  fix_artist.py
(+12 files in other folders)
