[package]
name = "music-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
ffmpeg-the-third = { version = "4", features = ["static"] }
lofty = "0.22"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
